--- a/public/live.html
+++ b/public/live.html
@@ -70,7 +70,7 @@
       function getStreamUrl() {
         const params = new URLSearchParams(window.location.search);
         // Default stream if no ?url= is given
-        const fallback = "http://103.164.20.40:8888/cam1/index.m3u8";
+        const fallback = "https://mlenz.mzkki.my.id/cam1/index.m3u8";
         return params.get("url") || fallback;
       }
 
